tests/baselines/reference/parserES5ForOfStatement7.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement7.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement7.ts (1 errors) ====
    for (var a: number = 1, b: string = "" of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }